--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,9 @@
 <app-nav-bar></app-nav-bar>
 
 <div class="container" style="margin-top: 120px;">
-    <h2>Ralol shop</h2>
+    
+    <app-shop></app-shop>
+
+
 </div>
 
