--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4" *ngFor="let item of products">
+                <div class="col-md-4 mb-3" *ngFor="let item of products">
                     <app-product-item [product]="item"></app-product-item>
 
                 </div>
