--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -11,15 +11,23 @@
 
             <h5 class="text-info mt-3">Brands</h5>
             <ul class="list-group">
-                <li class="list-group-item" *ngFor="let item of brands">
-                    <a href="#" >{{item.name}}</a>
+                <li class="list-group-item" *ngFor="let item of brands"
+                    [class.active]="item.id == this.selectedBrans"
+                    [value] = "item.id"
+                    (click)="onBrandSelected(item.id)"
+                >
+                    {{item.name}}
                 </li>
             </ul>
 
             <h5 class="text-info mt-3">Types</h5>
             <ul class="list-group">
-                <li class="list-group-item" *ngFor="let item of productTypes">
-                    <a href="#">{{item.name}}</a>
+                <li class="list-group-item" *ngFor="let item of productTypes"
+                    [class.active]="item.id == this.selectedType"
+                    [value] = "item.id"
+                    (click)="onTypeSelected(item.id)"
+                >
+                    {{item.name}}
                 </li>
 
             </ul>
