--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -30,9 +30,10 @@
 
         <section class="col-9">
             <div class="d-flex justify-content-between align-items-center mb-2">
-                <header>
-                    <span>Showing <strong>{{this.shopParams.pageSize * this.shopParams.pageNumber}}</strong> of <strong>{{this.totalCount}}</strong> results </span>
-                </header>
+                <app-paging-header [pageNumber]="this.shopParams.pageNumber"
+                [pageSize]="this.shopParams.pageSize"
+                [totalCount]="this.totalCount"
+                > </app-paging-header>
                 <div class="form-inline mt-2">
                     <input type="text" class="form-control" placeholder="Search" style="width: 300ox;" #txtSearch />
                     <button class="btn btn-outline-primary ml-2" (click)="onSearchClicked()" >Search</button>
@@ -47,13 +48,11 @@
             </div>
 
             <div class="d-flex justify-content-center" *ngIf="this.totalCount && this.totalCount > this.shopParams.pageSize">
-                <pagination [boundaryLinks]="true" [totalItems]="this.totalCount" previousText="&lsaquo;" nextText="&rsaquo;"
-                    firstText="&laquo;" lastText="&raquo;"
-                    [itemsPerPage]="this.shopParams.pageSize"
-                    (pageChanged)="onPageChanged($event)"
-                    >
+                    <app-pager [totalCount]="this.totalCount"
+                               [pageSize]="this.shopParams.pageSize" 
+                               (pageChanged)="onPageChanged($event)" >
 
-                </pagination>
+                    </app-pager>
             </div>
 
         </section>
