--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <div class="container" style="margin-top: 120px;">
     
-    <app-shop></app-shop>
+    <router-outlet></router-outlet>
 
 
 </div>
