--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -2,7 +2,7 @@
     <img src="{{product.pictureUrl}}" alt="image" class="img-fuild bg-light"/>
 
     <div class="card-body d-flex flex-column">
-        <a href="#">
+        <a routerLink="/shop/{{product.id}}">
             <h6>{{product.name}}</h6>
         </a>
 
@@ -11,7 +11,7 @@
         <div class="d-flex justify-content-between align-items-center">
             <div class="btn-group">
                 <button type="button" class="btn btn-sm btn-outline-secondary fa fa-shopping-cart"></button>
-                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                <button type="button" class="btn btn-sm btn-outline-secondary" routerLink="/shop/{{product.id}}">View</button>
                
             </div>
             <small class="text-muted">9 mins</small>
