--- a/client/src/app/shop/product-details/product-details.component.html
+++ b/client/src/app/shop/product-details/product-details.component.html
@@ -16,7 +16,7 @@
 
             </i>
         
-            <button class="btn btn-secondary btn-lg ml-4">Add to Cart</button>
+            <button class="btn btn-outline-success btn-lg ml-4">Add to Cart</button>
         </div>
     </div>
     <div class="row">
