--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -8,7 +8,7 @@
       
     </nav>
     <div class="d-flex align-items-center">
-        <a href="#" class="position-relative">
+        <a routerLink="/basket" class="position-relative">
             <i class="fa fa-shopping-cart fa-2x mr-5 text-dark"></i>
            <div class="cart-no">6</div>
         </a>
